{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 119,
  "lineage": "dc1639cd-3252-d45d-fde0-6b5997983795",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:security-group/sg-0bf8101cc076b2bfb",
            "description": "EKS Cluster Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf8101cc076b2bfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "erumpay-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "512138915880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "erumpay-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "erumpay-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:security-group/sg-05f90c17373f72798",
            "description": "EKS Node Group Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f90c17373f72798",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf8101cc076b2bfb"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "erumpay-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "512138915880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "erumpay-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "erumpay-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:security-group/sg-0d0157ae008e50efc",
            "description": "RDS Security Group",
            "egress": [],
            "id": "sg-0d0157ae008e50efc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f90c17373f72798"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "erumpay-rds-sg",
            "name_prefix": "",
            "owner_id": "512138915880",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "erumpay-rds-sg"
            },
            "tags_all": {
              "Name": "erumpay-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster",
            "module.security.aws_security_group.eks_nodes",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5d8cd51c28f6a9b",
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:elastic-ip/eipalloc-0a5d8cd51c28f6a9b",
            "association_id": "eipassoc-09bc007b4dd44d6dc",
            "domain": "vpc",
            "id": "eipalloc-0a5d8cd51c28f6a9b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ae88c1cd3b72e201",
            "private_dns": "ip-10-0-0-23.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-15-165-121-186.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.121.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "erumpay-nat-eip"
            },
            "tags_all": {
              "Name": "erumpay-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:internet-gateway/igw-01329c744b34d3513",
            "id": "igw-01329c744b34d3513",
            "owner_id": "512138915880",
            "tags": {
              "Name": "erumpay-igw"
            },
            "tags_all": {
              "Name": "erumpay-igw"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5d8cd51c28f6a9b",
            "association_id": "eipassoc-09bc007b4dd44d6dc",
            "connectivity_type": "public",
            "id": "nat-0e4684e601b17fee2",
            "network_interface_id": "eni-0ae88c1cd3b72e201",
            "private_ip": "10.0.0.23",
            "public_ip": "15.165.121.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078b8b878680bd3f1",
            "tags": {
              "Name": "erumpay-nat"
            },
            "tags_all": {
              "Name": "erumpay-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:route-table/rtb-008887737cc07c55c",
            "id": "rtb-008887737cc07c55c",
            "owner_id": "512138915880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4684e601b17fee2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "erumpay-rt-private"
            },
            "tags_all": {
              "Name": "erumpay-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:route-table/rtb-00c4f934ad1c8cf36",
            "id": "rtb-00c4f934ad1c8cf36",
            "owner_id": "512138915880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01329c744b34d3513",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "erumpay-rt-public"
            },
            "tags_all": {
              "Name": "erumpay-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7c8ddc359be5e49",
            "route_table_id": "rtb-008887737cc07c55c",
            "subnet_id": "subnet-0697e810d02f09146"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eca876722c6d9862",
            "route_table_id": "rtb-008887737cc07c55c",
            "subnet_id": "subnet-0dddf567883aee8ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a08a4af5e6d424c",
            "route_table_id": "rtb-00c4f934ad1c8cf36",
            "subnet_id": "subnet-078b8b878680bd3f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9981a1d8c19424c",
            "route_table_id": "rtb-00c4f934ad1c8cf36",
            "subnet_id": "subnet-0ff6a71e1aaaf2c3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087632a13adef5b46",
            "route_table_id": "rtb-00c4f934ad1c8cf36",
            "subnet_id": "subnet-0bfab6bec686ca85b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06641deba576405fb",
            "route_table_id": "rtb-00c4f934ad1c8cf36",
            "subnet_id": "subnet-09f82e28671f33fc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-0697e810d02f09146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0697e810d02f09146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-private-1",
              "kubernetes.io/cluster/erumpay-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "erumpay-private-1",
              "kubernetes.io/cluster/erumpay-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-0dddf567883aee8ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dddf567883aee8ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-private-2",
              "kubernetes.io/cluster/erumpay-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "erumpay-private-2",
              "kubernetes.io/cluster/erumpay-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-078b8b878680bd3f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078b8b878680bd3f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-public-1"
            },
            "tags_all": {
              "Name": "erumpay-public-1"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-0ff6a71e1aaaf2c3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff6a71e1aaaf2c3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-public-2"
            },
            "tags_all": {
              "Name": "erumpay-public-2"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-0bfab6bec686ca85b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfab6bec686ca85b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-public-3"
            },
            "tags_all": {
              "Name": "erumpay-public-3"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:subnet/subnet-09f82e28671f33fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f82e28671f33fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512138915880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "erumpay-public-4"
            },
            "tags_all": {
              "Name": "erumpay-public-4"
            },
            "vpc_id": "vpc-072d53b00bb245367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:512138915880:vpc/vpc-072d53b00bb245367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2e0aeb2c7f8b84c",
            "default_route_table_id": "rtb-0fe61d01f99c0cbef",
            "default_security_group_id": "sg-0e64cfadad2aa3cab",
            "dhcp_options_id": "dopt-0522c1bd1825189e8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072d53b00bb245367",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe61d01f99c0cbef",
            "owner_id": "512138915880",
            "tags": {
              "Name": "erumpay-vpc"
            },
            "tags_all": {
              "Name": "erumpay-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}